--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button class="general-button" type="button">Заказать услугу</button>
+                <button class="general-button" type="button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
 
@@ -71,7 +71,8 @@
                             </svg>
                         </div>
                         <h3 class="features-title">Внимание к деталям</h3>
-                        <p class="features-contur">Идейные соображения, а также начало повседневной работы по формированию
+                        <p class="features-contur">Идейные соображения, а также начало повседневной работы по
+                            формированию
                             позиции.</p>
                     </li>
                     <li class="features-item">
@@ -113,9 +114,17 @@
             <div class="container">
                 <h2 class="section-title works-title">Чем мы занимаемся</h2>
                 <ul class="list works">
-                    <li class="works-item"><img src="./images/01.jpg" alt="расчет" width="370" height="294"></li>
-                    <li class="works-item"><img src="./images/02.jpg" alt="синхронихация" width="370" height="294"></li>
-                    <li class="works-item"><img src="./images/03.jpg" alt="палитра-цветов" width="370" height="294">
+                    <li class="works-item">
+                        <img src="./images/01.jpg" alt="расчет" width="370" height="294">
+                        <h2 class="services-list-text">Десктопные приложения</h2>
+                    </li>
+                    <li class="works-item">
+                        <img src="./images/02.jpg" alt="синхронихация" width="370" height="294">
+                        <h2 class="services-list-text">Мобильные приложения</h2>
+                    </li>
+                    <li class="works-item">
+                        <img src="./images/03.jpg" alt="палитра-цветов" width="370" height="294">
+                        <h2 class="services-list-text">Дизайнерские решения</h2>
                     </li>
                 </ul>
             </div>
@@ -381,6 +390,16 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="button-modal" type="button" data-modal-close>
+                <svg class="icon-close" width="18" height="18">
+                    <use href="./images/svg/icons.svg#icon-close" />
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./css/modal.js"></script>
 
 </body>
 
