--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,15 @@
 
                 <ul class="list project-list">
                     <li class="project-plate">
-                        <a class="link works-list-item" href="">
-                            <img src="./images2/1.jpg" alt="фото веб-сайта">
+                        <a class="link project-list-item" href="">
+
+                            <div class="project-list-img"><img src="./images2/1.jpg" alt="фото веб-сайта">
+                                <p class="project-list-overlay">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                                    или частном лице.
+                                </p>
+                            </div>
                             <div class="plate-container">
                                 <h2 class="project-title">Технокряк</h2>
                                 <p class="project-text">Веб-сайт</p>
@@ -76,8 +83,14 @@
                         </a>
                     </li>
                     <li class="project-plate">
-                        <a class="link works-list-item" href="">
-                            <img src="./images2/2.jpg" alt="фото постера">
+                        <a class="link project-list-item" href="">
+                            <div class="project-list-img"><img src="./images2/2.jpg" alt="фото постера">
+                                <p class="project-list-overlay">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                                    или частном лице.
+                                </p>
+                            </div>
                             <div class="plate-container">
                                 <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="project-text">Дизайн</p>
@@ -85,8 +98,14 @@
                         </a>
                     </li>
                     <li class="project-plate">
-                        <a class="link works-list-item" href="">
-                            <img src="./images2/3.jpg" alt="фото логотипа ресторана">
+                        <a class="link project-list-item" href="">
+                            <div class="project-list-img"><img src="./images2/3.jpg" alt="фото логотипа ресторана">
+                                <p class="project-list-overlay">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                                    или частном лице.
+                                </p>
+                            </div>
                             <div class="plate-container">
                                 <h2 class="project-title">Ресторан Seafood</h2>
                                 <p class="project-text">Приложение</p>
@@ -94,8 +113,14 @@
                         </a>
                     </li>
                     <li class="project-plate">
-                        <a class="link works-list-item" href="">
-                            <img src="./images2/4.jpg" alt="фото наушники">
+                        <a class="link project-list-item" href="">
+                            <div class="project-list-img"><img src="./images2/4.jpg" alt="фото наушники">
+                                <p class="project-list-overlay">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                                    или частном лице.
+                                </p>
+                            </div>
                             <div class="plate-container">
                                 <h2 class="project-title">Проект Prime</h2>
                                 <p class="project-text">Маркетинг</p>
@@ -103,8 +128,14 @@
                         </a>
                     </li>
                     <li class="project-plate">
-                        <a class="link works-list-item" href="">
-                            <img src="./images2/5.jpg" alt="фото коробок">
+                        <a class="link project-list-item" href="">
+                            <div class="project-list-img"><img src="./images2/5.jpg" alt="фото коробок">
+                                <p class="project-list-overlay">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                                    или частном лице.
+                                </p>
+                            </div>
                             <div class="plate-container">
                                 <h2 class="project-title">Проект Boxes</h2>
                                 <p class="project-text">Приложение</p>
@@ -112,8 +143,14 @@
                         </a>
                     </li>
                     <li class="project-plate">
-                        <a class="link works-list-item" href="">
-                            <img src="./images2/6.jpg" alt="фото веб-сайта">
+                        <a class="link project-list-item" href="">
+                            <div class="project-list-img"><img src="./images2/6.jpg" alt="фото веб-сайта">
+                                <p class="project-list-overlay">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                                    или частном лице.
+                                </p>
+                            </div>
                             <div class="plate-container">
                                 <h2 class="project-title">Inspiration has no Borders</h2>
                                 <p class="project-text">Веб-сайт</p>
@@ -121,8 +158,14 @@
                         </a>
                     </li>
                     <li class="project-plate">
-                        <a class="link works-list-item" href="">
-                            <img src="./images2/7.jpg" alt="фото дизайна журнала">
+                        <a class="link project-list-item" href="">
+                            <div class="project-list-img"><img src="./images2/7.jpg" alt="фото дизайна журнала">
+                                <p class="project-list-overlay">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                                    или частном лице.
+                                </p>
+                            </div>
                             <div class="plate-container">
                                 <h2 class="project-title">Издание Limited Edition</h2>
                                 <p class="project-text">Дизайн</p>
@@ -130,8 +173,14 @@
                         </a>
                     </li>
                     <li class="project-plate">
-                        <a class="link works-list-item" href="">
-                            <img src="./images2/8.jpg" alt="фото лейбла">
+                        <a class="link project-list-item" href="">
+                            <div class="project-list-img"><img src="./images2/8.jpg" alt="фото лейбла">
+                                <p class="project-list-overlay">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                                    или частном лице.
+                                </p>
+                            </div>
                             <div class="plate-container">
                                 <h2 class="project-title">Проект LAB</h2>
                                 <p class="project-text">Маркетинг</p>
@@ -139,8 +188,14 @@
                         </a>
                     </li>
                     <li class="project-plate">
-                        <a class="link works-list-item" href="">
-                            <img src="./images2/9.jpg" alt="фото приложения">
+                        <a class="link project-list-item" href="">
+                            <div class="project-list-img"><img src="./images2/9.jpg" alt="фото приложения">
+                                <p class="project-list-overlay">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                                    или частном лице.
+                                </p>
+                            </div>
                             <div class="plate-container">
                                 <h2 class="project-title">Growing Business</h2>
                                 <p class="project-text">Приложение</p>
@@ -173,7 +228,7 @@
             </div>
 
             <!-- footer social -->
-            
+
             <div class="footer-join">
                 <h2 class="footer-join-title">присоединяйтесь</h2>
                 <ul class="join-list list">
